--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "version": "0.0.1",
   "license": "GPL-3.0",
   "scripts": {
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
+    "start": "nodemon server.js",
+    "postinstall": "./scripts/postinstall.sh"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
-    "systemjs": "0.19.6",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10"
+    "angular": "^1.4.9",
+    "express": "^4.13.4",
+    "google-auth-library": "^0.9.7",
+    "googleapis": "^2.1.7",
+    "jade": "^1.11.0",
+    "lodash": "^3.9.1",
+    "node-uber": "0.0.7",
+    "q": "^1.4.1",
+    "querystring": "^0.2.0",
+    "request-promise": "^0.4.2",
+    "xml2js-promise": "0.0.2"
   },
   "devDependencies": {
-    "concurrently": "^1.0.0",
-    "lite-server": "^1.3.1",
-    "typescript": "^1.7.3"
+    "nodemon": "^1.8.1"
+  },
+  "scripts": {
+
   }
 }
