Switch to dynamic, config-driven module system
Moving all the frontend pieces into modules, having the modules loaded
dynamically based on the config, and the frontend rendered based on
whether the backend modules load successfully or not.

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,12 @@
     "foundation-sites": "~6.1.1",
     "lodash": "~4.3.0",
     "moment": "~2.11.2",
-    "angular-xml": "~2.2.1",
-    "weather-icons": "~2.0.10"
+    "weather-icons": "~2.0.10",
+    "angular": "angularjs#~1.5.3",
+    "angular-resource": "~1.5.3"
+  },
+  "resolutions": {
+    "angular": "~1.5.3",
+    "angular-resource": "~1.5.3"
   }
 }
