--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-uber": "0.0.7",
     "q": "^1.4.1",
     "querystring": "^0.2.0",
+    "request": "^2.72.0",
     "request-promise": "^0.4.2",
     "underscore": "^1.8.3",
     "xml2js-promise": "0.0.2"
