--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
   "name": "magic-mirror",
-  "description": "The frontend and backend for running a magic mirror, written in Angular2 and NodeJS",
-  "repository": "https://github.com/pcsforeducation/magic-mirror",
-  "version": "0.1.0",
-  "license": "GPL-3.0",
-  "scripts": {
-    "start": "nodemon server.js",
-    "postinstall": "./scripts/postinstall.sh"
-  },
+  "version": "1.0.0",
+  "description": "The frontend for running a magic mirror, written in React",
+  "private": false,
   "dependencies": {
-    "angular": "^1.4.9",
-    "express": "^4.13.4",
-    "google-auth-library": "^0.9.7",
-    "googleapis": "^2.1.7",
-    "jade": "^1.11.0",
-    "lodash": "^3.9.1",
-    "node-uber": "0.0.7",
-    "q": "^1.4.1",
-    "querystring": "^0.2.0",
-    "request-promise": "^0.4.2",
-    "underscore": "^1.8.3",
-    "xml2js-promise": "0.0.2"
+    "moment": "^2.20.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.0",
+    "weather-icons": "^1.3.2"
   },
-  "devDependencies": {
-    "nodemon": "^1.8.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
